# ChangeLog for dev-ruby/spruz
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/spruz/Attic/ChangeLog,v 1.7 2011/06/25 07:16:49 graaff Exp $

  25 Jun 2011; Hans de Graaff <graaff@gentoo.org> -spruz-0.2.2.ebuild:
  Remove old version.

*spruz-0.2.7 (29 May 2011)

  29 May 2011; Hans de Graaff <graaff@gentoo.org> +spruz-0.2.7.ebuild:
  Version bump.

  12 Feb 2011; Hans de Graaff <graaff@gentoo.org> -spruz-0.2.0.ebuild,
  -spruz-0.2.1.ebuild:
  Remove old versions.

*spruz-0.2.2 (26 Nov 2010)

  26 Nov 2010; Hans de Graaff <graaff@gentoo.org> +spruz-0.2.2.ebuild:
  Version bump.

*spruz-0.2.1 (07 Nov 2010)

  07 Nov 2010; Hans de Graaff <graaff@gentoo.org> +spruz-0.2.1.ebuild:
  Version bump.

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org> spruz-0.2.0.ebuild:
  add ~x86, bug 343849

*spruz-0.2.0 (28 Oct 2010)

  28 Oct 2010; Hans de Graaff <graaff@gentoo.org> +spruz-0.2.0.ebuild,
  +metadata.xml:
  Initial import. Dependency of file-tail.
