@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/spruz
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/spruz/Attic/ChangeLog,v 1.7 2011/06/25 07:16:49 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/spruz/Attic/ChangeLog,v 1.8 2011/07/09 07:10:25 graaff Exp $
+
+*spruz-0.2.9 (09 Jul 2011)
+
+  09 Jul 2011; Hans de Graaff <graaff@gentoo.org> +spruz-0.2.9.ebuild:
+  Version bump.
 
   25 Jun 2011; Hans de Graaff <graaff@gentoo.org> -spruz-0.2.2.ebuild:
   Remove old version.
